2014-12-12  Karl Berry  <karl@gnu.org>

	* pdftoepdf.cc (read_pdf_info): do not even warn if
	pdf_inclusion_errorlevel (aka \pdfinclusionerrorlevel) is negative.
	Discussed with Thanh, 31 May 2011 10:17:35.

2014-11-06  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* regex/regcomp.c [WIN64]: Use __int64 (not long) as intptr_t.

2014-08-19  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* writepng.c: Avoid PNG warnings.

2014-06-26  Thanh Han The  <thanh@river-valley.org>

	* pdftoepdf.cc: Put a line-ending character after writing a group dict.
	(Report from Ross Moore on pdftex list,
	http://tug.org/pipermail/pdftex/2014-June/008911.html)

2014-06-19  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* mapfile.c, tounicode.c, writet1.c, writettf: Avoid undefined
	behaviour when char is signed.

2014-06-18  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* ttf2afm.c: Avoid undefined behaviour when char is signed.

2014-06-16  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* pdftosrc.cc: Adapt to xpdf-3.04.

2012-05-20  Thanh Han The  <thanh@river-valley.org>

	* pdftex.web: do not try to avoid printing 0 0 Td.
	E.g., \rlap fails.
	(Report from Heiko on pdftex list, 21 May 2014 22:11:21.)

2014-05-06  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Update to e-pTeX and e-upTeX from Akira Kakuto.
	* ptexlib.h (getfiledump): Move declaration also used by
	e-(u)pTeX from here to ../texmfmp.h.
	* utils.c (getfiledump): Move definition also used by
	e-(u)pTeX from here to ../lib/texmfmp.c.

2014-03-18  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* pdftex.web and writefont.c: Import from r704.

2014-03-17  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* pdftoepdf.cc, pdftosrc.cc: Kpathsea headers and <w2c/config.h>
	are now C++ safe.

2014-03-07  Karl Berry  <karl@tug.org>

	* pdftex_version.h,
	* pdftex.web (pdftex_revision, pdftex_version_string): [1.40.]15.

2014-02-14  Karl Berry  <karl@gnu.org>

	* pdftex.web (pdf_suppress_warning_page_group): new primitive
	parameter \pdfsuppresswarningpagegroup.